# astor

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  Makefile  README.rst  requirements-dev.txt  requirements-tox.txt  setup.cfg  setup.py  setuputils.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml  tox.yml
astor/: __init__.py  anti8.py  code_gen.py  codegen.py  command_line.py  file_util.py  misc.py  node_util.py  op_util.py  prettifier.py  py_precedence.py  rtrip.py  source_repr.py  src_diff.py  string_repr.py  tree_walk.py  treewalk.py
docs/: Makefile  changelog.rst  conf.py  index.rst
examples/: anti8.py
test/: test_codegen.py  test_transform.py
tests/: build_expressions.py  check_astunparse.py  check_expressions.py  nested_with_for_tests.py  support.py  test_ast_attributes.py  test_code_gen.py  test_code_to_ast.py  test_codegen.py  test_json_to_ast.py  test_misc.py  test_nested_func_detection.py  test_optional.py  test_rtrip.py  test_subclass_code_gen.py  test_transform.py
tests/fixtures/: class_with_attribute.py  class_with_attribute.py27.json  class_with_attribute.py34.json  class_with_attribute.py36.json  dictionary.json  dictionary.py  dictionary.py2.json  integer.json  integer_javascript.json  integer_javascript.py
