[metadata]
name = astor
description = Read/rewrite/write Python ASTs
long_description = file:README.rst
version = file:astor/VERSION
author = Patrick Maupin
author_email = pmaupin@gmail.com
platforms = Independent
url = https://github.com/berkerpeksag/astor
license = BSD-3-Clause
keywords = ast, codegen, PEP 8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
tests_requires = ["nose", "astunparse"]
test_suite = nose.collector

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[build-system]
requires = ['setuptools', 'wheel']
